# nix-rust-quick-start

./: Cargo.toml  flake.nix
src/: main.rs
