[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = [ "sqlcipher" ]}
